# django-tournaments

./: .pre-commit-config.yaml  Justfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_user.py  0003_remove_userprofile_id_alter_userprofile_user.py
accounts/templates/accounts/: profile.html
django_tournaments/: asgi.py  config.py  settings.py  urls.py  wsgi.py
static/css/: output.css
static/js/: navbar.js
templates/: _base.html
templates/_navbar/: closeMenuIcon.html  desktopMenu.html  desktopMenuItem.html  menuItem.html  menuList.html  mobileMenu.html  mobileMenuButton.html  mobileMenuItem.html  navbar.html  openMenuIcon.html
tournaments/: apps.py  models.py  urls.py  views.py
tournaments/migrations/: 0001_initial.py
tournaments/templates/tournaments/: index.html
